--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
-.logo {
-  width: 120px;
-  height: 31px;
-  background: rgba(83, 156, 23, 0.2);
-  margin: 16px 24px 16px 0;
-  float: left;
-  
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 160px;
+  line-height: 160px;
+  background: #364d79;
+  overflow: hidden;
+}
+.carrousel div{
+  display: flex;
+  justify-content: center;
+  width: 150vw;
 }
 
 
